# rust_template

./: Cargo.toml  README.md
src/: main.rs  sum.rs  template.rs
