[package]
name = "{{crate_name}}"
#name="template"
version = "0.1.0"
edition = "2021"

[dependencies]
king="0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5" 
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "blocking", "default-tls", "rustls-tls"] }
rayon = "1.10.0"  
sha2 = "0.10.8"
chrono = "0.4.38"
tokio-tungstenite = "0.20"
futures-util = "0.3.31"
tokio-rustls = "0.23"
rustls = "0.23.16"
rustls-pemfile = "1.0"
indicatif = "0.17.8"    #progress bar
colored = "2.1.0"

